--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,10 @@
     <groupId>com.github.meixuesong</groupId>
     <artifactId>merge-cpd-pmd-report-maven-plugin</artifactId>
     <version>1.0</version>
-    <packaging>maven-plugin</packaging>
-
-    <name>merge-cpd-pmd-report-maven-plugin Maven Plugin</name>
-
-    <!-- FIXME change it to the project's website -->
-    <url>http://maven.apache.org</url>
+    <packaging>merge-cpd-pmd-report-maven-plugin</packaging>
+    <name>merge-cpd-pmd-report-maven-plugin</name>
+    <description>A manven plugin to merge cpd report(cpd.xml) into pmd report(pmd.xml)</description>
+    <url>https://github.com/meixuesong/merge-cpd-pmd-report-maven-plugin.git</url>
 
     <licenses>
         <license>
@@ -29,9 +27,9 @@
     </developers>
 
     <scm>
-        <connection>scm:git:git://github.com/meixuesong/refactoring-kata-spotbugs-rule.git</connection>
-        <developerConnection>scm:git:ssh://github.com:meixuesong/refactoring-kata-spotbugs-rule.git</developerConnection>
-        <url>https://github.com/meixuesong/refactoring-kata-spotbugs-rule/tree/master</url>
+        <connection>scm:git:git://github.com/meixuesong/merge-cpd-pmd-report-maven-plugin.gi</connection>
+        <developerConnection>scm:git:ssh://github.com:meixuesong/merge-cpd-pmd-report-maven-plugin.git</developerConnection>
+        <url>https://github.com/meixuesong/merge-cpd-pmd-report-maven-plugin/tree/master</url>
     </scm>
 
     <properties>
@@ -39,7 +37,6 @@
         <java.version>1.8</java.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <maven.compiler.release>1.8</maven.compiler.release>
     </properties>
 
     <dependencies>
@@ -84,62 +81,96 @@
                     <goalPrefix>merge-cpd-pmd-report-maven-plugin</goalPrefix>
                     <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
                 </configuration>
-                <executions>
-                    <execution>
-                        <id>mojo-descriptor</id>
-                        <goals>
-                            <goal>descriptor</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>help-goal</id>
-                        <goals>
-                            <goal>helpmojo</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
 
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
+
     <profiles>
         <profile>
-            <id>run-its</id>
+            <id>release</id>
             <build>
-
                 <plugins>
                     <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-invoker-plugin</artifactId>
-                        <version>1.7</version>
+                        <groupId>org.sonatype.plugins</groupId>
+                        <artifactId>nexus-staging-maven-plugin</artifactId>
+                        <version>1.6.7</version>
+                        <extensions>true</extensions>
                         <configuration>
-                            <debug>true</debug>
-                            <cloneProjectsTo>${project.build.directory}/it</cloneProjectsTo>
-                            <pomIncludes>
-                                <pomInclude>*/pom.xml</pomInclude>
-                            </pomIncludes>
-                            <postBuildHookScript>verify</postBuildHookScript>
-                            <localRepositoryPath>${project.build.directory}/local-repo</localRepositoryPath>
-                            <settingsFile>src/it/settings.xml</settingsFile>
-                            <goals>
-                                <goal>clean</goal>
-                                <goal>test-compile</goal>
-                            </goals>
+                            <serverId>ossrh</serverId>
+                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                        </configuration>
+                    </plugin>
+
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-source-plugin</artifactId>
+                        <version>2.2.1</version>
+                        <executions>
+                            <execution>
+                                <id>attach-sources</id>
+                                <goals>
+                                    <goal>jar-no-fork</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>3.2.0</version>
+                        <configuration>
+                            <doclint>none</doclint>
                         </configuration>
                         <executions>
                             <execution>
-                                <id>integration-test</id>
+                                <id>attach-javadocs</id>
                                 <goals>
-                                    <goal>install</goal>
-                                    <goal>integration-test</goal>
-                                    <goal>verify</goal>
+                                    <goal>jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <version>1.5</version>
+                        <executions>
+                            <execution>
+                                <id>sign-artifacts</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
                                 </goals>
                             </execution>
                         </executions>
                     </plugin>
                 </plugins>
-
             </build>
         </profile>
     </profiles>
+
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+                <version>2.6</version>
+            </plugin>
+        </plugins>
+    </reporting>
 </project>
